Update header name in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h1, h2 {
 <body>
 
 <header>
-    <h1>Narasingha Navaratnalake Dulshan Malshika</h1>
+    <h1>Dulshan Malshika</h1>
     <p>Graduate Student | Statistics & Mathematics | Clemson University</p>
 </header>
 
