--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ h1, h2 {
 <header>
     <h1>Dulshan Malshika</h1>
     <p>Graduate Student | Statistics & Mathematics | Clemson University</p>
+    <img src="1758399302105.jpg" alt="Dulshan Photo" style="width:200px; border-radius:8px;">
+
 </header>
 
 <section class="container">
