Refactor header for improved layout and styling

--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@ h1, h2 {
 </head>
 <body>
 
-<header>
-    <h1>Dulshan Malshika</h1>
-    <p>Graduate Student | Statistics & Mathematics | Clemson University</p>
-    <img src="1758399302105.jpeg" alt="Dulshan Photo" style="width:200px; border-radius:8px;">
+<header style="display: flex; justify-content: space-between; align-items: center; padding: 40px; text-align: left;">
+    <div>
+        <h1>Dulshan Malshika</h1>
+        <p>Graduate Student | Statistics & Mathematics | Clemson University</p>
+    </div>
 
+    <img src="1758399302105.jpeg" alt="Dulshan Photo" 
+         style="width:180px; border-radius:8px; margin-left:20px;">
 </header>
 
 <section class="container">
