--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ h1, h2 {
 </head>
 <body>
 
+<header>
 <header style="display: flex; justify-content: space-between; align-items: center; padding: 40px; text-align: left;">
     <div>
         <h1>Dulshan Malshika</h1>
@@ -53,6 +54,7 @@ h1, h2 {
     <img src="1758399302105.jpeg" alt="Dulshan Photo" 
          style="width:180px; border-radius:8px; margin-left:20px;">
 </header>
+<header>
 
 <section class="container">
 
