--- a/index.html
+++ b/index.html
@@ -45,15 +45,35 @@ h1, h2 {
 <body>
 
 <header>
-<header style="display: flex; justify-content: space-between; align-items: center; padding: 40px; text-align: left;">
-    <div>
-        <h1>Dulshan Malshika</h1>
-        <p>Graduate Student | Statistics & Mathematics | Clemson University</p>
+<header style="
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    padding: 40px; 
+    text-align: center;
+    background: #343a40;
+    color: white;
+    position: relative;
+">
+
+    <!-- Text centered -->
+    <div style="flex: 1;">
+        <h1 style="margin: 0;">Dulshan Malshika</h1>
+        <p style="margin-top: 10px;">Graduate Student | Statistics & Mathematics | Clemson University</p>
     </div>
 
-    <img src="1758399302105.jpeg" alt="Dulshan Photo" 
-         style="width:180px; border-radius:8px; margin-left:20px;">
+    <!-- Photo on the right -->
+    <img src="1758399302105.jpeg" 
+         alt="Dulshan Photo"
+         style="
+            width: 150px; 
+            height: 150px; 
+            border-radius: 50%; 
+            object-fit: cover; 
+            margin-left: 20px;
+         ">
 </header>
+
 <header>
 
 <section class="container">
