--- a/index.html
+++ b/index.html
@@ -70,29 +70,26 @@ h1, h2 {
 
     <div class="card">
         <h2>About Me</h2>
-        <p>Hi! I'm Dulshan, a graduate student at Clemson University studying Statistics and Mathematics. I'm also interested in extreme value theory, data analysis, machine learning, and RC vehicles.</p>
+        <p>Hi! I'm Dulshan, a graduate student at Clemson University studying Statistics and Mathematics. I'm also interested in extreme value theory, data analysis, and machine learning.</p>
     </div>
 
     <div class="card">
         <h2>Projects & Research</h2>
         <ul>
-            <li>Extreme Value Analysis of Oyster Elevation Data</li>
-            <li>Multinomial Logistic Models using High School & Beyond (HSB)</li>
-            <li>Longitudinal analysis of maternal smoking effects on wheezing (OHIO dataset)</li>
-            <li>Split-plot analysis of Semicond data</li>
+            <li>Extreme Value Analysis/li>
             <li>PCA & Time Series Modeling of SST Data</li>
         </ul>
     </div>
 
     <div class="card">
-        <h2>YouTube & RC Content</h2>
-        <p>I run a YouTube channel where I unbox and review RC vehicles, drones, and tech gadgets.</p>
+        <h2>YouTube </h2>
+        <p>Find the links here.</p>
         <p><a href="YOUR_LINK_HERE" target="_blank">Visit my YouTube Channel</a></p>
     </div>
 
     <div class="card">
         <h2>Contact</h2>
-        <p>Email: yourname@email.com</p>
+        <p>Email: dulshanmalshika1199@email.com</p>
     </div>
 
 </section>
