--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h1, h2 {
     <div class="card">
         <h2>Projects & Research</h2>
         <ul>
-            <li>Extreme Value Analysis/li>
+            <li>Extreme Value Analysis</li>
             <li>PCA & Time Series Modeling of SST Data</li>
         </ul>
     </div>
@@ -87,10 +87,17 @@ h1, h2 {
         <p><a href="YOUR_LINK_HERE" target="_blank">Visit my YouTube Channel</a></p>
     </div>
 
-    <div class="card">
-        <h2>Contact</h2>
-        <p>Email: dulshanmalshika1199@email.com</p>
-    </div>
+<div class="card">
+    <h2>Contact</h2>
+    <p style="display: flex; align-items: center;">
+        <img src="email.png" alt="Gmail" 
+             style="width:28px; height:28px; margin-right:10px;">
+        <a href="mailto:dulshanmalshika1199@gmail.com">
+            dulshanmalshika1199@gmail.com
+        </a>
+    </p>
+</div>
+
 
 </section>
 
