Update YouTube link target and href attributes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ h1, h2 {
     <div class="card">
         <h2>YouTube </h2>
         <p>Find the links here.</p>
-        <p><a href="YOUR_LINK_HERE" target="www.youtube.com/@dulshanmalshika">Visit my YouTube Channel</a></p>
+        <p><a href="www.youtube.com/@dulshanmalshika" target="_blank">Visit my YouTube Channel</a></p>
     </div>
 
 <div class="card">
