Add YouTube link and image to index.html

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@ h1, h2 {
         <a href="mailto:dulshanmalshika1199@gmail.com">
             dulshanmalshika1199@gmail.com
         </a>
+        <img src="youtube.png" alt="YouTube" style="width:24px; margin-right:5px;">
+<a href="https://www.youtube.com/@dulshanmalshika" target="_blank">
+    Visit my YouTube Channel
+</a>
+
     </p>
 </div>
 
