Remove YouTube section and add CV download link

--- a/index.html
+++ b/index.html
@@ -81,18 +81,8 @@ h1, h2 {
         </ul>
     </div>
 
-<div class="card">
-    <h2>YouTube</h2>
-    <p>Find the links here.</p>
-    <p>
-        <a href="https://www.youtube.com/@dulshanmalshika" target="_blank">
-            Visit my YouTube Channel
-        </a>
-    </p>
-</div>
 
-
-<div class="card">
+    <div class="card">
     <h2>Contact</h2>
     <p style="display: flex; align-items: center;">
         <img src="email.png" alt="Gmail" 
@@ -100,6 +90,11 @@ h1, h2 {
         <a href="mailto:dulshanmalshika1199@gmail.com">
             dulshanmalshika1199@gmail.com
         </a>
+    </p>
+
+    <p>
+        <a href="Dulshan_CV.pdf" target="_blank">Download CV</a> | 
+        <a href="https://github.com/dulshanmalshika" target="_blank">GitHub</a>
     </p>
 </div>
 
