Update contact section in index.html
Updated contact section with new Gmail icon and removed CV and GitHub links.

--- a/index.html
+++ b/index.html
@@ -82,19 +82,14 @@ h1, h2 {
     </div>
 
 
-    <div class="card">
+<div class="card">
     <h2>Contact</h2>
     <p style="display: flex; align-items: center;">
-        <img src="email.png" alt="Gmail" 
-             style="width:20px; height:20px; margin-right:10px;">
+        <img src="gmail.png" alt="Gmail" 
+             style="width:28px; height:28px; margin-right:10px;">
         <a href="mailto:dulshanmalshika1199@gmail.com">
             dulshanmalshika1199@gmail.com
         </a>
-    </p>
-
-    <p>
-        <a href="Dulshan_CV.pdf" target="_blank">Download CV</a> | 
-        <a href="https://github.com/dulshanmalshika" target="_blank">GitHub</a>
     </p>
 </div>
 
