Fix image source for Gmail icon in contact section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ h1, h2 {
 <div class="card">
     <h2>Contact</h2>
     <p style="display: flex; align-items: center;">
-        <img src="gmail.png" alt="Gmail" 
+        <img src="email.png" alt="Gmail" 
              style="width:28px; height:28px; margin-right:10px;">
         <a href="mailto:dulshanmalshika1199@gmail.com">
             dulshanmalshika1199@gmail.com
