Add contact information section with email and LinkedIn

--- a/index.html
+++ b/index.html
@@ -84,11 +84,24 @@ h1, h2 {
 
 <div class="card">
     <h2>Contact</h2>
-    <p style="display: flex; align-items: center;">
+
+    <!-- Email -->
+    <p style="display: flex; align-items: center; margin-bottom: 10px;">
         <img src="email.png" alt="Gmail" 
              style="width:28px; height:28px; margin-right:10px;">
         <a href="mailto:dulshanmalshika1199@gmail.com">
             dulshanmalshika1199@gmail.com
+        </a>
+    </p>
+
+    <!-- LinkedIn -->
+    <p style="display: flex; align-items: center;">
+        <img src="linkedin.png" alt="LinkedIn"
+             style="width:28px; height:28px; margin-right:10px;">
+        <a href="www.linkedin.com/in/
+dulshan-malshika-359016181
+" target="_blank">
+            LinkedIn Profile
         </a>
     </p>
 </div>
