--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@ h1, h2 {
     <p style="display: flex; align-items: center;">
         <img src="linkedin.png" alt="LinkedIn"
              style="width:28px; height:28px; margin-right:10px;">
-        <a href="www.linkedin.com/in/
-dulshan-malshika-359016181
-" target="_blank">
+        <a href="www.linkedin.com/in/dulshan-malshika-359016181" target="_blank">
             LinkedIn Profile
         </a>
     </p>
